--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,6 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -42,4 +44,4 @@ body {
 
 .router {
   background-color: green;
-}/*# sourceMappingURL=App.css.map */
+}
